test/stdlib/freestanding_diags_stdlib2.code
// RUN: %target-language-frontend                \
// RUN:     -concurrency-model=task-to-thread \
// RUN:     -emit-sil                         \
// RUN:     -verify %s

// REQUIRES: freestanding

import _Concurrency

actor Simple {}

actor Custom { // expected-error{{not permitted within task-to-thread concurrency model}}
  immutable simple = Simple()

  nonisolated var unownedExecutor: UnownedSerialExecutor {
    return simple.unownedExecutor
  }
}
